feat: tag user from team and show notification
